--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -105,10 +105,17 @@ bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 bEnableGestureRecognizer=False
 bUseAutocorrect=False
+bEnabledLegacyMappingDeprecationWarnings=True
 DefaultViewportMouseCaptureMode=CapturePermanently
 DefaultViewportMouseLockMode=LockAlways
 FOVScale=0.011110
 DoubleClickTime=0.200000
++ActionMappings=(ActionName="MoveForward",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=W)
++ActionMappings=(ActionName="MoveRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=D)
++ActionMappings=(ActionName="MoveLeft",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=A)
++ActionMappings=(ActionName="MoveBackward",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=S)
++ActionMappings=(ActionName="Interact",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
+DeprecatedActionAndAxisNames=()
 DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
 DefaultInputComponentClass=/Script/EnhancedInput.EnhancedInputComponent
 DefaultTouchInterface=None
