--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -108,3 +108,6 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+[/Script/Engine.NetworkSettings]
+p.EnableMultiplayerWorldOriginRebasing=True
+
