player learning co-op

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -123,5 +123,6 @@ DefaultTouchInterface=None
 +ConsoleKeys=Tilde
 
 [EnhancedInputPlatformSettings_Windows EnhancedInputPlatformSettings]
++InputData=/Game/Blueprints/NewEnhancedInputPlatformData.NewEnhancedInputPlatformData_C
 bShouldLogMappingContextRedirects=False
 
