--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -6,20 +6,23 @@
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/DemoTemplate/_Core/Lvl_IntroRoom.Lvl_IntroRoom
 LocalMapOptions=
-TransitionMap=
+TransitionMap=None
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
+FourPlayerSplitscreenLayout=Grid
+bShowAllPlayerWidgetsWhenSplitscreenDisabled=False
+bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/DemoTemplate/_Core/Lvl_IntroRoom.Lvl_IntroRoom
-ServerDefaultMap=/Engine/Maps/Entry
-GlobalDefaultGameMode=/Game/FirstPerson/Blueprints/BP_FirstPersonGameMode.BP_FirstPersonGameMode_C
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Game/Player/BP_GameMode.BP_GameMode_C
 GlobalDefaultServerGameMode=None
 
 [/Script/Engine.RendererSettings]
 r.ReflectionMethod=1
 r.GenerateMeshDistanceFields=True
-r.DynamicGlobalIlluminationMethod=1
+r.DynamicGlobalIlluminationMethod=2
 r.Mobile.EnableNoPrecomputedLightingCSMShader=1
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
@@ -64,6 +67,7 @@ r.DistanceFields.DefaultVoxelDensity=0.200000
 r.Lumen.HardwareRayTracing.LightingMode=0
 
 r.Substrate.ProjectGBufferFormat=0
+r.AntiAliasingMethod=2
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
